resolved some spacing errors on flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,6 @@ footer h2{
 }
 
 footer div{
-    
     line-height: 1.5;
     text-align:right;
 }
@@ -87,7 +86,6 @@ footer a{
 }
 
 section{
-
     padding: 60px;
 }
 
@@ -167,7 +165,6 @@ section{
 .section-title{
     font-size:55px;
     color: #024e76;
-    display: inline-block;
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -307,7 +304,7 @@ section{
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
-    
+
 }
 
 
